--- a/index.html
+++ b/index.html
@@ -1,1 +1,132 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <title>Jaiden Gerig</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="./bootstrap.min.css" media="screen">
+    <link rel="stylesheet" href="./style.css" media="screen">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="../bower_components/html5shiv/dist/html5shiv.js"></script>
+      <script src="../bower_components/respond/dest/respond.min.js"></script>
+    <![endif]-->
+    <script>
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-23019901-1']);
+    _gaq.push(['_setDomainName', "bootswatch.com"]);
+    _gaq.push(['_setAllowLinker', true]);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+        var ga = document.createElement('script');
+        ga.type = 'text/javascript';
+        ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(ga, s);
+    })();
+    </script>
+</head>
+
+<body>
+    <div class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <a href="#top" class="navbar-brand">Jaiden Gerig</a>
+                <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="navbar-collapse collapse" id="navbar-main">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="../help/">Help</a>
+                    </li>
+                    <li>
+                        <a href="#resume">Resume</a>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="mailto:jaidengerig@gmail.com">Contact me</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="page-header" id="banner">
+            <div class="row">
+                <div class="col-md-9 col-centered">
+                    <div class="text-center">
+                        <br/>
+                        <br/>
+                        <img src="http://www.gravatar.com/avatar/c40c74b23b32fadea4d1f9f2efabc777?s=150" class="img-circle" />
+                        <h3 class="title">
+                            <a href="/">Jaiden Gerig</a>
+                        </h3>
+                        <p>
+                            <a href="https://github.com/jaideng123"><i class="fa fa-github fa-lg"></i></a> &nbsp;
+                            <a href="https://twitter.com/jaideng123"><i class="fa fa-twitter fa-lg"></i></a> &nbsp;
+                            <a href="mailto:jaidengerig@gmail.com"><i class="fa fa-envelope fa-lg"></i></a>
+                        </p>
+                        <p id ="bio">
+                        Hailing from Austin, Texas, Jaiden Gerig is a student at Texas A&M University 
+      where he is currently studying for a Bachelors degree in Computer science.
+      His professional interests include web and commercial software development.
+      Whenever he's not studying, coding, or scarfing down burgers, Jaiden also enjoys video-games,
+      live music, and Game of Thrones.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class = "row" id="resume">
+              <div class = "col-md-12">
+              <h2>Resume</h2>
+                <iframe src="https://docs.google.com/viewer?srcid=0Bz8zxihkODz-Q0lxbHBJSTdwd2c&pid=explorer&efh=false&a=v&chrome=false&embedded=true" id="docviewer"></iframe>
+              </div>
+            </div>
+        </div>
+        <footer>
+        </footer>
+    </div>
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="../assets/js/bootswatch.js"></script>
+    <script type="text/javascript">
+    /* <![CDATA[ */
+    (function() {
+        try {
+            var s, a, i, j, r, c, l = document.getElementsByTagName("a"),
+                t = document.createElement("textarea");
+            for (i = 0; l.length - i; i++) {
+                try {
+                    a = l[i].getAttribute("href");
+                    if (a && a.indexOf("/cdn-cgi/l/email-protection") > -1 && (a.length > 28)) {
+                        s = '';
+                        j = 27 + 1 + a.indexOf("/cdn-cgi/l/email-protection");
+                        if (a.length > j) {
+                            r = parseInt(a.substr(j, 2), 16);
+                            for (j += 2; a.length > j && a.substr(j, 1) != 'X'; j += 2) {
+                                c = parseInt(a.substr(j, 2), 16) ^ r;
+                                s += String.fromCharCode(c);
+                            }
+                            j += 1;
+                            s += a.substr(j, a.length - j);
+                        }
+                        t.innerHTML = s.replace(/</g, "&lt;").replace(/>/g, "&gt;");
+                        l[i].setAttribute("href", "mailto:" + t.value);
+                    }
+                } catch (e) {}
+            }
+        } catch (e) {}
+    })();
+    /* ]]> */
+    </script>
+</body>
+
+</html>
