Grabbed missing Javascript files

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         </footer>
     </div>
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="../assets/js/bootswatch.js"></script>
+    <script src="bootstrap.min.js"></script>
+    <script src="bootswatch.js"></script>
     <script type="text/javascript">
     /* <![CDATA[ */
     (function() {
