--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
     <script src="bootstrap.min.js"></script>
     <script src="bootswatch.js"></script>
     <script type="text/javascript">
+    var cw = $('#docviewer').width();
+    $('#docviewer').css({'height':cw+'px'});
     /* <![CDATA[ */
     (function() {
         try {
