--- a/index.html
+++ b/index.html
@@ -46,7 +46,13 @@
             <div class="navbar-collapse collapse" id="navbar-main">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="../help/">Help</a>
+                        <a href="#projects">Projects</a>
+                    </li>
+                    <li>
+                        <a href="#work">Work Experience</a>
+                    </li>
+                    <li>
+                        <a href="#skills">Skills</a>
                     </li>
                     <li>
                         <a href="#resume">Resume</a>
