--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
             </div>
              <div class="col-md-6">
                 <div id="slides">
-                    <img src="http://placehold.it/940x528">
-                    <img src="http://placehold.it/940x528">
-                    <img src="http://placehold.it/940x528">
-                    <img src="http://placehold.it/940x528">
-                    <img src="http://placehold.it/940x528">
+                    <img src="./projects/swimbook/sb1.png" class = "project-img">
+                    <img src="./projects/swimbook/sb2.png" class = "project-img">
+                    <img src="./projects/swimbook/sb3.png" class = "project-img">
+                    <img src="./projects/swimbook/sb4.png" class = "project-img">
+                    <img src="http://placehold.it/940x528" class = "project-img">
                     <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="fa fa-chevron-left fa-large"></i></a>
                     <a href="#" class="slidesjs-next slidesjs-navigation"><i class="fa fa-chevron-right fa-large"></i></a>
                 </div>
@@ -125,6 +125,20 @@
         <footer>
         </footer>
     </div>
+<div id="imagemodal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Modal Header</h4>
+      </div>
+      <div class="modal-body text-center">
+      <img src="" id="imageView">
+      </div>
+    </div>
+
+  </div>
+</div>
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="bootstrap.min.js"></script>
     <script src="bootswatch.js"></script>
@@ -138,6 +152,11 @@
         height: 528,
         navigation: false
       });
+    });
+    $("img.project-img").on("click", function() {
+        $('#imageView').attr('src', $(this).attr('src')); // here asign the image to the modal when the user click the enlarge link
+        $('#imagemodal').modal('show'); // imagemodal is the id attribute assigned to the bootstrap modal, then i use the show function
+        console.log("Clicked");
     });
     /* <![CDATA[ */
     (function() {
