Reorganized JS files

--- a/index.html
+++ b/index.html
@@ -15,22 +15,11 @@
       <script src="../bower_components/html5shiv/dist/html5shiv.js"></script>
       <script src="../bower_components/respond/dest/respond.min.js"></script>
     <![endif]-->
-    <script>
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-23019901-1']);
-    _gaq.push(['_setDomainName', "bootswatch.com"]);
-    _gaq.push(['_setAllowLinker', true]);
-    _gaq.push(['_trackPageview']);
-
-    (function() {
-        var ga = document.createElement('script');
-        ga.type = 'text/javascript';
-        ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(ga, s);
-    })();
-    </script>
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="bootstrap.min.js"></script>
+    <script src="bootswatch.js"></script>
+    <script src="jquery.slides.min.js"></script>
+    <script src="scripts.js"></script>
 </head>
 
 <body>
@@ -109,9 +98,9 @@
                     <img src="./projects/swimbook/sb2.png" class = "project-img">
                     <img src="./projects/swimbook/sb3.png" class = "project-img">
                     <img src="./projects/swimbook/sb4.png" class = "project-img">
-                    <img src="http://placehold.it/940x528" class = "project-img">
                     <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="fa fa-chevron-left fa-large"></i></a>
                     <a href="#" class="slidesjs-next slidesjs-navigation"><i class="fa fa-chevron-right fa-large"></i></a>
+                    <a href="#" class="slidesjs-navigation icon"><i class="fa fa-expand"></i></a>
                 </div>
             </div>
         </div>
@@ -139,54 +128,6 @@
 
   </div>
 </div>
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="bootstrap.min.js"></script>
-    <script src="bootswatch.js"></script>
-    <script src="jquery.slides.min.js"></script>
-    <script type="text/javascript">
-    var cw = $('#docviewer').width();
-    $('#docviewer').css({'height':cw+'px'});
-    $(function() {
-      $('#slides').slidesjs({
-        width: 940,
-        height: 528,
-        navigation: false
-      });
-    });
-    $("img.project-img").on("click", function() {
-        $('#imageView').attr('src', $(this).attr('src')); // here asign the image to the modal when the user click the enlarge link
-        $('#imagemodal').modal('show'); // imagemodal is the id attribute assigned to the bootstrap modal, then i use the show function
-        console.log("Clicked");
-    });
-    /* <![CDATA[ */
-    (function() {
-        try {
-            var s, a, i, j, r, c, l = document.getElementsByTagName("a"),
-                t = document.createElement("textarea");
-            for (i = 0; l.length - i; i++) {
-                try {
-                    a = l[i].getAttribute("href");
-                    if (a && a.indexOf("/cdn-cgi/l/email-protection") > -1 && (a.length > 28)) {
-                        s = '';
-                        j = 27 + 1 + a.indexOf("/cdn-cgi/l/email-protection");
-                        if (a.length > j) {
-                            r = parseInt(a.substr(j, 2), 16);
-                            for (j += 2; a.length > j && a.substr(j, 1) != 'X'; j += 2) {
-                                c = parseInt(a.substr(j, 2), 16) ^ r;
-                                s += String.fromCharCode(c);
-                            }
-                            j += 1;
-                            s += a.substr(j, a.length - j);
-                        }
-                        t.innerHTML = s.replace(/</g, "&lt;").replace(/>/g, "&gt;");
-                        l[i].setAttribute("href", "mailto:" + t.value);
-                    }
-                } catch (e) {}
-            }
-        } catch (e) {}
-    })();
-    /* ]]> */
-    </script>
 </body>
 
 </html>
