--- a/index.html
+++ b/index.html
@@ -87,10 +87,13 @@
         </div>
         <div class="row project well well-sm">
             <div class="col-md-12">
-                    <h3>Title</h3>
+                    <h3>SwimBook</h3>
             </div>
             <div class="col-md-6">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tempus est quis luctus faucibus. Suspendisse maximus hendrerit lectus, eleifend interdum risus porttitor sit amet. Suspendisse aliquet dui eget tristique egestas. Aenean non ipsum a arcu euismod interdum ut in mi. Maecenas sed est ligula. Etiam eget ullamcorper massa, sit amet sollicitudin turpis. Donec eu mauris in neque commodo pharetra. Quisque elementum, orci eleifend vulputate volutpat, libero arcu laoreet nisi, eget tristique enim nisl a sapien. Pellentesque a leo in ligula mollis scelerisque. Nullam aliquam felis quis velit tempus consectetur. Integer sagittis justo id lacus varius feugiat sagittis eu nunc. Curabitur commodo velit sit amet accumsan luctus. Nunc tempus facilisis erat, sit amet consectetur ante dignissim nec. Suspendisse potenti. Proin mollis dolor mi, vel rhoncus lacus consequat bibendum. Curabitur ac interdum augue. Morbi ac nulla in lacus dignissim consequat eget at lacus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vivamus id molestie nisl, ut dictum lacus. Suspendisse auctor ultrices pulvinar. Aenean eu varius arcu. Vivamus vel cursus nisi, eu tincidunt neque. In ut placerat velit. Suspendisse quis luctus urna, vel gravida libero.
+                    A web application I created for a local YMCA to store, search, and access records of people who have passed a required swim test. It is now used by 3 separate YMCAs to synchronize their records.<br/>
+                    Created using Ruby on Rails, PostgreSQL, and Phusion Passenger for the backend and Bootstrap and DataTables for the front end.
+
+
             </div>
              <div class="col-md-6">
                 <div id="slides">
