Added Diaspora to projects

--- a/index.html
+++ b/index.html
@@ -101,8 +101,29 @@
                     <img src="./projects/swimbook/sb2.png" class = "project-img">
                     <img src="./projects/swimbook/sb3.png" class = "project-img">
                     <img src="./projects/swimbook/sb4.png" class = "project-img">
-                    <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="fa fa-chevron-left fa-large"></i></a>
-                    <a href="#" class="slidesjs-next slidesjs-navigation"><i class="fa fa-chevron-right fa-large"></i></a>
+                    <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="fa fa-chevron-left fa-large nav"></i></a>
+                    <a href="#" class="slidesjs-next slidesjs-navigation"><i class="fa fa-chevron-right fa-large nav"></i></a>
+                    <a href="#" class="slidesjs-navigation icon"><i class="fa fa-expand"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="row project well well-sm">
+            <div class="col-md-12">
+                    <h3>Diaspora</h3>
+            </div>
+            <div class="col-md-6">
+                    Diaspora is an open-source decentralized social networking site built with Ruby on Rails.
+                    <br/>
+                    I contributed to the project by renovating their notifications dropdown to allow for infinite scrolling using AJAX. I also fixed minor bugs related to the UI and backend systems. 
+
+            </div>
+             <div class="col-md-6">
+                <div id="slides2">
+                    <img src="./projects/diaspora/d1.png" class = "project-img">
+                    <img src="./projects/diaspora/d2.png" class = "project-img">
+                    <img src="./projects/diaspora/d3.png" class = "project-img">
+                    <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="fa fa-chevron-left fa-large nav"></i></a>
+                    <a href="#" class="slidesjs-next slidesjs-navigation"><i class="fa fa-chevron-right fa-large nav"></i></a>
                     <a href="#" class="slidesjs-navigation icon"><i class="fa fa-expand"></i></a>
                 </div>
             </div>
