Removed expand icon + added links

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
         <div class="row project well well-sm">
             <div class="col-md-12">
-                    <h3>SwimBook</h3>
+                    <h3><a href="https://github.com/jaideng123/SwimBook">SwimBook</a></h3>
             </div>
             <div class="col-md-6">
                     A web application I created for a local YMCA to store, search, and access records of people who have passed a required swim test. It is now used by 3 separate YMCAs to synchronize their records.<br/>
@@ -103,13 +103,12 @@
                     <img src="./projects/swimbook/sb4.png" class = "project-img">
                     <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="fa fa-chevron-left fa-large nav"></i></a>
                     <a href="#" class="slidesjs-next slidesjs-navigation"><i class="fa fa-chevron-right fa-large nav"></i></a>
-                    <a href="#" class="slidesjs-navigation icon"><i class="fa fa-expand"></i></a>
                 </div>
             </div>
         </div>
         <div class="row project well well-sm">
             <div class="col-md-12">
-                    <h3>Diaspora</h3>
+                    <h3><a href="https://github.com/diaspora/diaspora">Diaspora</a></h3>
             </div>
             <div class="col-md-6">
                     Diaspora is an open-source decentralized social networking site built with Ruby on Rails.
@@ -124,7 +123,6 @@
                     <img src="./projects/diaspora/d3.png" class = "project-img">
                     <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="fa fa-chevron-left fa-large nav"></i></a>
                     <a href="#" class="slidesjs-next slidesjs-navigation"><i class="fa fa-chevron-right fa-large nav"></i></a>
-                    <a href="#" class="slidesjs-navigation icon"><i class="fa fa-expand"></i></a>
                 </div>
             </div>
         </div>
