Added Speed Button project

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="col-md-6">
                     Diaspora is an open-source decentralized social networking site built with Ruby on Rails.
                     <br/>
-                    I contributed to the project by renovating their notifications dropdown to allow for infinite scrolling using AJAX. I also fixed minor bugs related to the UI and backend systems. 
+                    I contributed to the project by renovating their notifications dropdown to allow for more notifications using a jquery scrollbar and infinite scrolling using AJAX. I also fixed minor bugs related to the UI and backend systems. 
 
             </div>
              <div class="col-md-6">
@@ -121,6 +121,25 @@
                     <img src="./projects/diaspora/d1.png" class = "project-img">
                     <img src="./projects/diaspora/d2.png" class = "project-img">
                     <img src="./projects/diaspora/d3.png" class = "project-img">
+                    <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="fa fa-chevron-left fa-large nav"></i></a>
+                    <a href="#" class="slidesjs-next slidesjs-navigation"><i class="fa fa-chevron-right fa-large nav"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="row project well well-sm">
+            <div class="col-md-12">
+                    <h3><a href="https://github.com/jaideng123/Lemonade">Speed Button</a></h3>
+            </div>
+            <div class="col-md-6">
+                    An Android game based around pressing buttons, created over the course of 24 hours for TamuHack 2014(A Hackathon hosted at Texas A&M)
+                    <br/>
+                    The application itself uses Java, along with the Android SDK and has multiple game modes along with a score tracking system. My task was coming up with and improving the basic game while my team mates worked on the various game modes
+            </div>
+             <div class="col-md-6">
+                <div id="slides3">
+                    <img src="./projects/speedbutton/sb1.png" class = "project-img">
+                    <img src="./projects/speedbutton/sb2.png" class = "project-img">
+                    <img src="./projects/speedbutton/sb3.png" class = "project-img">
                     <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="fa fa-chevron-left fa-large nav"></i></a>
                     <a href="#" class="slidesjs-next slidesjs-navigation"><i class="fa fa-chevron-right fa-large nav"></i></a>
                 </div>
