--- a/index.html
+++ b/index.html
@@ -145,6 +145,26 @@
                 </div>
             </div>
         </div>
+        <div class="row project well well-sm">
+            <div class="col-md-12">
+                    <h3><a href="https://github.com/jaideng123/Cryptosystems">RSA and Stegonography</a></h3>
+            </div>
+            <div class="col-md-6">
+                    An RSA and Stegonography tool created in C++ for encrypting and decrypting plaintext created in conjunction with 5 other team mates as a final project for CSCE 315(Programming Studio)
+                    <br/>
+                    Created using Agile development to effectively respond to changing requirements and organize work that needed to be done. The software itself uses CPPunit to accomadate test driven development and GMP for performing operations on big integers. My main role on the team was to organize Scrums, maintain the backlog, and design and implement the RSA system.
+                    
+            </div>
+             <div class="col-md-6">
+                <div id="slides4">
+                    <img src="./projects/crypto/cr1.png" class = "project-img">
+                    <img src="./projects/crypto/cr2.png" class = "project-img">
+                    <img src="./projects/crypto/cr3.png" class = "project-img">
+                    <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="fa fa-chevron-left fa-large nav"></i></a>
+                    <a href="#" class="slidesjs-next slidesjs-navigation"><i class="fa fa-chevron-right fa-large nav"></i></a>
+                </div>
+            </div>
+        </div>
     </div>
 <div class="row" id="resume">
     <div class="col-md-12">
