--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="bootswatch.js"></script>
     <script src="jquery.slides.min.js"></script>
     <script src="scripts.js"></script>
+    <script src="jquery.waypoints.min.js"></script>
 </head>
 
 <body>
