Changed color of top

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Jaiden Gerig</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="./bootstrap.min.css" media="screen">
+    <link rel="stylesheet" href="./bootstrap.css" media="screen">
     <link rel="stylesheet" href="./bootswatch.css" media="screen">
     <link rel="stylesheet" href="./style.css" media="screen">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -80,6 +80,12 @@
                 </div>
             </div>
         </div>
+    <div class = "bs-docs-section" id = "skills">
+        <div class="row">
+            <div class="col-md-6 well well-sm text-center">
+            </div>
+        </div>
+    </div>
     <div class = "bs-docs-section" id = "projects">
         <div class="row">
             <div class="col-md-12">
