--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="./bootstrap.css" media="screen">
     <link rel="stylesheet" href="./bootswatch.css" media="screen">
     <link rel="stylesheet" href="./style.css" media="screen">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./font-awesome.min.css">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="../bower_components/html5shiv/dist/html5shiv.js"></script>
       <script src="../bower_components/respond/dest/respond.min.js"></script>
     <![endif]-->
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
     <script src="bootswatch.js"></script>
     <script src="jquery.slides.min.js"></script>
@@ -69,133 +69,194 @@
                             <a href="https://twitter.com/jaideng123"><i class="fa fa-twitter fa-lg"></i></a> &nbsp;
                             <a href="mailto:jaidengerig@gmail.com"><i class="fa fa-envelope fa-lg"></i></a>
                         </p>
-                        <p id ="bio">
-                        Hailing from Austin, Texas, Jaiden Gerig is a student at Texas A&M University 
-      where he is currently studying for a Bachelors degree in Computer science.
-      His professional interests include web and commercial software development.
-      Whenever he's not studying, coding, or scarfing down burgers, Jaiden also enjoys video-games,
-      live music, and Game of Thrones.
+                        <p id="bio">
+                            Hailing from Austin, Texas, Jaiden Gerig is a student at Texas A&M University where he is currently studying for a Bachelors degree in Computer science. His professional interests include web and commercial software development. Whenever he's not studying, coding, or scarfing down burgers, Jaiden also enjoys video-games, live music, and Game of Thrones.
                         </p>
                     </div>
                 </div>
             </div>
         </div>
-    <div class = "bs-docs-section" id = "skills">
-        <div class="row">
-            <div class="col-md-6 well well-sm text-center">
+        <div class="bs-docs-section" id="work">
+        	<div class="row">
+                <div class="col-md-12">
+                    <h2>Work Experience</h2>
+                </div>
+            </div>
+            <div class="row well well-sm">
+            	<div class = "col-md-5 pull-right">
+                		<img src="csen-logo.png" class="logo"></img>
+                </div>
+                <div class="col-md-7">
+                    <h3>Texas A&M Computer Science Dept.</h3>
+                    <div class="col-md-6">
+                    <h4>Peer Tutor</h4>
+                    </div>
+                    <div class="col-md-6">
+                    <h5>08/2014 - Present</h5>
+                    </div>
+                    <p class="col-md-12">
+                    	I help with labs for classes i had previously done well in by sitting in and answering any questions students may have about the material or the assignments. I also hold office hours through-out the week where any student can come in for help with anything related to the course they are taking.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>Work Experience</h2>
+                </div>
+            </div>
+
+        </div>
+        <div class="bs-docs-section" id="skills">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>Technical Skills</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3 well well-sm skill-cat">
+                    <h3>Languages</h3>
+                    <ul>
+                        <li>C/C++</li>
+                        <li> Java</li>
+                        <li> C#</li>
+                        <li> LATEX</li>
+                        <li>JavaScript</li>
+                        <li> Ruby</li>
+                        <li> SQL</li>
+                        <li> Python</li>
+                        <li> Haskell</li>
+                    </ul>
+                </div>
+                <div class="col-md-3 well well-sm skill-cat">
+                    <h3>Data</h3>
+                    <ul>
+                        <li>PostgreSQL</li>
+                        <li> XML</li>
+                        <li> JSON</li>
+                    </ul>
+                </div>
+                <div class="col-md-3 well well-sm skill-cat">
+                    <h3>Web</h3>
+                    <ul>
+                        <li>HTML5</li>
+                        <li>CSS3</li>
+                        <li>Bootstrap</li>
+                        <li>AJAX</li>
+                    </ul>
+                </div>
+                <div class="col-md-3 well well-sm skill-cat">
+                    <h3>Frameworks</h3>
+                    <ul>
+                        <li>Ruby on Rails</li>
+                        <li>jQuery</li>
+                        <li>Android SDK</li>
+                        <li>NodeJS</li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-    <div class = "bs-docs-section" id = "projects">
-        <div class="row">
-            <div class="col-md-12">
-                <h2>Projects</h2>
+        <div class="bs-docs-section" id="projects">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>Projects</h2>
+                </div>
             </div>
-        </div>
-        <div class="row project well well-sm">
-            <div class="col-md-12">
+            <div class="row project well well-sm">
+                <div class="col-md-12">
                     <h3><a href="https://github.com/jaideng123/SwimBook">SwimBook</a></h3>
-            </div>
-            <div class="col-md-6">
-                    A web application I created for a local YMCA to store, search, and access records of people who have passed a required swim test. It is now used by 3 separate YMCAs to synchronize their records.<br/>
-                    Created using Ruby on Rails, PostgreSQL, and Phusion Passenger for the backend and Bootstrap and DataTables for the front end.
-
-
-            </div>
-             <div class="col-md-6">
-                <div id="slides">
-                    <img src="./projects/swimbook/sb1.png" class = "project-img">
-                    <img src="./projects/swimbook/sb2.png" class = "project-img">
-                    <img src="./projects/swimbook/sb3.png" class = "project-img">
-                    <img src="./projects/swimbook/sb4.png" class = "project-img">
-                    <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="fa fa-chevron-left fa-large nav"></i></a>
-                    <a href="#" class="slidesjs-next slidesjs-navigation"><i class="fa fa-chevron-right fa-large nav"></i></a>
+                </div>
+                <div class="col-md-6">
+                    A web application I created for a local YMCA to store, search, and access records of people who have passed a required swim test. It is now used by 3 separate YMCAs to synchronize their records.
+                    <br/> Created using Ruby on Rails, PostgreSQL, and Phusion Passenger for the backend and Bootstrap and DataTables for the front end.
+                </div>
+                <div class="col-md-6">
+                    <div id="slides">
+                        <img src="./projects/swimbook/sb1.png" class="project-img">
+                        <img src="./projects/swimbook/sb2.png" class="project-img">
+                        <img src="./projects/swimbook/sb3.png" class="project-img">
+                        <img src="./projects/swimbook/sb4.png" class="project-img">
+                        <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="fa fa-chevron-left fa-large nav"></i></a>
+                        <a href="#" class="slidesjs-next slidesjs-navigation"><i class="fa fa-chevron-right fa-large nav"></i></a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="row project well well-sm">
-            <div class="col-md-12">
+            <div class="row project well well-sm">
+                <div class="col-md-12">
                     <h3><a href="https://github.com/diaspora/diaspora">Diaspora</a></h3>
-            </div>
-            <div class="col-md-6">
+                </div>
+                <div class="col-md-6">
                     Diaspora is an open-source decentralized social networking site built with Ruby on Rails.
-                    <br/>
-                    I contributed to the project by renovating their notifications dropdown to allow for more notifications using a jquery scrollbar and infinite scrolling using AJAX. I also fixed minor bugs related to the UI and backend systems. 
-
-            </div>
-             <div class="col-md-6">
-                <div id="slides2">
-                    <img src="./projects/diaspora/d1.png" class = "project-img">
-                    <img src="./projects/diaspora/d2.png" class = "project-img">
-                    <img src="./projects/diaspora/d3.png" class = "project-img">
-                    <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="fa fa-chevron-left fa-large nav"></i></a>
-                    <a href="#" class="slidesjs-next slidesjs-navigation"><i class="fa fa-chevron-right fa-large nav"></i></a>
+                    <br/> I contributed to the project by renovating their notifications dropdown to allow for more notifications using a jquery scrollbar and infinite scrolling using AJAX. I also fixed minor bugs related to the UI and backend systems.
+                </div>
+                <div class="col-md-6">
+                    <div id="slides2">
+                        <img src="./projects/diaspora/d1.png" class="project-img">
+                        <img src="./projects/diaspora/d2.png" class="project-img">
+                        <img src="./projects/diaspora/d3.png" class="project-img">
+                        <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="fa fa-chevron-left fa-large nav"></i></a>
+                        <a href="#" class="slidesjs-next slidesjs-navigation"><i class="fa fa-chevron-right fa-large nav"></i></a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="row project well well-sm">
-            <div class="col-md-12">
+            <div class="row project well well-sm">
+                <div class="col-md-12">
                     <h3><a href="https://github.com/jaideng123/Lemonade">Speed Button</a></h3>
-            </div>
-            <div class="col-md-6">
+                </div>
+                <div class="col-md-6">
                     An Android game based around pressing buttons, created over the course of 24 hours for TamuHack 2014(A Hackathon hosted at Texas A&M)
-                    <br/>
-                    The application itself uses Java, along with the Android SDK and has multiple game modes along with a score tracking system. My task was coming up with and improving the basic game while my team mates worked on the various game modes
-            </div>
-             <div class="col-md-6">
-                <div id="slides3">
-                    <img src="./projects/speedbutton/sb1.png" class = "project-img">
-                    <img src="./projects/speedbutton/sb2.png" class = "project-img">
-                    <img src="./projects/speedbutton/sb3.png" class = "project-img">
-                    <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="fa fa-chevron-left fa-large nav"></i></a>
-                    <a href="#" class="slidesjs-next slidesjs-navigation"><i class="fa fa-chevron-right fa-large nav"></i></a>
+                    <br/> The application itself uses Java, along with the Android SDK and has multiple game modes along with a score tracking system. My task was coming up with and improving the basic game while my team mates worked on the various game modes
+                </div>
+                <div class="col-md-6">
+                    <div id="slides3">
+                        <img src="./projects/speedbutton/sb1.png" class="project-img">
+                        <img src="./projects/speedbutton/sb2.png" class="project-img">
+                        <img src="./projects/speedbutton/sb3.png" class="project-img">
+                        <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="fa fa-chevron-left fa-large nav"></i></a>
+                        <a href="#" class="slidesjs-next slidesjs-navigation"><i class="fa fa-chevron-right fa-large nav"></i></a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="row project well well-sm">
-            <div class="col-md-12">
+            <div class="row project well well-sm">
+                <div class="col-md-12">
                     <h3><a href="https://github.com/jaideng123/Cryptosystems">RSA and Stegonography</a></h3>
-            </div>
-            <div class="col-md-6">
+                </div>
+                <div class="col-md-6">
                     An RSA and Stegonography tool created in C++ for encrypting and decrypting plaintext created in conjunction with 5 other team mates as a final project for CSCE 315(Programming Studio)
-                    <br/>
-                    Created using Agile development to effectively respond to changing requirements and organize work that needed to be done. The software itself uses CPPunit to accomadate test driven development and GMP for performing operations on big integers. My main role on the team was to organize Scrums, maintain the backlog, and design and implement the RSA system.
-                    
-            </div>
-             <div class="col-md-6">
-                <div id="slides4">
-                    <img src="./projects/crypto/cr1.png" class = "project-img">
-                    <img src="./projects/crypto/cr2.png" class = "project-img">
-                    <img src="./projects/crypto/cr3.png" class = "project-img">
-                    <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="fa fa-chevron-left fa-large nav"></i></a>
-                    <a href="#" class="slidesjs-next slidesjs-navigation"><i class="fa fa-chevron-right fa-large nav"></i></a>
+                    <br/> Created using Agile development to effectively respond to changing requirements and organize work that needed to be done. The software itself uses CPPunit to accomadate test driven development and GMP for performing operations on big integers. My main role on the team was to organize Scrums, maintain the backlog, and design and implement the RSA system.
+                </div>
+                <div class="col-md-6">
+                    <div id="slides4">
+                        <img src="./projects/crypto/cr1.png" class="project-img">
+                        <img src="./projects/crypto/cr2.png" class="project-img">
+                        <img src="./projects/crypto/cr3.png" class="project-img">
+                        <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="fa fa-chevron-left fa-large nav"></i></a>
+                        <a href="#" class="slidesjs-next slidesjs-navigation"><i class="fa fa-chevron-right fa-large nav"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-<div class="row" id="resume">
-    <div class="col-md-12">
-        <h2>Resume</h2>
-        <iframe src="https://docs.google.com/viewer?srcid=0Bz8zxihkODz-Q0lxbHBJSTdwd2c&pid=explorer&efh=false&a=v&chrome=false&embedded=true" id="docviewer"></iframe>
-    </div>
-</div>
+        <div class="row" id="resume">
+            <div class="col-md-12">
+                <h2>Resume</h2>
+                <iframe src="https://docs.google.com/viewer?srcid=0Bz8zxihkODz-Q0lxbHBJSTdwd2c&pid=explorer&efh=false&a=v&chrome=false&embedded=true" id="docviewer"></iframe>
+            </div>
+        </div>
         <footer>
         </footer>
     </div>
-<div id="imagemodal" class="modal fade" role="dialog">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title" id="myModalLabel">Modal Header</h4>
-      </div>
-      <div class="modal-body text-center">
-      <img src="" id="imageView">
-      </div>
+    <div id="imagemodal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel">Modal Header</h4>
+                </div>
+                <div class="modal-body text-center">
+                    <img src="" id="imageView">
+                </div>
+            </div>
+        </div>
     </div>
-
-  </div>
-</div>
 </body>
 
 </html>
