ok now its done for real

--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <title>Jaiden Gerig</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="./bootstrap.css" media="screen">
-    <link rel="stylesheet" href="./bootswatch.css" media="screen">
-    <link rel="stylesheet" href="./style.css" media="screen">
-    <link rel="stylesheet" href="./font-awesome.min.css">
+    <link rel="stylesheet" href="./css/bootstrap.css" media="screen">
+    <link rel="stylesheet" href="./css/bootswatch.css" media="screen">
+    <link rel="stylesheet" href="./css/style.css" media="screen">
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="../bower_components/html5shiv/dist/html5shiv.js"></script>
       <script src="../bower_components/respond/dest/respond.min.js"></script>
     <![endif]-->
-    <script src="jquery.min.js"></script>
-    <script src="bootstrap.min.js"></script>
-    <script src="bootswatch.js"></script>
-    <script src="jquery.slides.min.js"></script>
-    <script src="scripts.js"></script>
-    <script src="jquery.waypoints.min.js"></script>
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/bootswatch.js"></script>
+    <script src="./js/jquery.slides.min.js"></script>
+    <script src="./js/scripts.js"></script>
+    <script src="./js/jquery.waypoints.min.js"></script>
 </head>
 
 <body>
@@ -36,14 +36,14 @@
             </div>
             <div class="navbar-collapse collapse" id="navbar-main">
                 <ul class="nav navbar-nav">
+                	<li>
+                        <a href="#skills">Skills</a>
+                    </li>
                     <li>
                         <a href="#projects">Projects</a>
                     </li>
                     <li>
                         <a href="#work">Work Experience</a>
-                    </li>
-                    <li>
-                        <a href="#skills">Skills</a>
                     </li>
                     <li>
                         <a href="#resume">Resume</a>
@@ -75,36 +75,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="bs-docs-section" id="work">
-        	<div class="row">
-                <div class="col-md-12">
-                    <h2>Work Experience</h2>
-                </div>
-            </div>
-            <div class="row well well-sm">
-            	<div class = "col-md-5 pull-right">
-                		<img src="csen-logo.png" class="logo"></img>
-                </div>
-                <div class="col-md-7">
-                    <h3>Texas A&M Computer Science Dept.</h3>
-                    <div class="col-md-6">
-                    <h4>Peer Tutor</h4>
-                    </div>
-                    <div class="col-md-6">
-                    <h5>08/2014 - Present</h5>
-                    </div>
-                    <p class="col-md-12">
-                    	I help with labs for classes i had previously done well in by sitting in and answering any questions students may have about the material or the assignments. I also hold office hours through-out the week where any student can come in for help with anything related to the course they are taking.
-                    </p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>Work Experience</h2>
-                </div>
-            </div>
-
         </div>
         <div class="bs-docs-section" id="skills">
             <div class="row">
@@ -232,6 +202,30 @@
                         <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="fa fa-chevron-left fa-large nav"></i></a>
                         <a href="#" class="slidesjs-next slidesjs-navigation"><i class="fa fa-chevron-right fa-large nav"></i></a>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="bs-docs-section" id="work">
+        	<div class="row">
+                <div class="col-md-12">
+                    <h2>Work Experience</h2>
+                </div>
+            </div>
+            <div class="row well well-sm text-center">
+            	<div class = "col-md-5 pull-right">
+                		<img src="csen-logo.png" class="logo"></img>
+                </div>
+                <div class="col-md-7">
+                    <a href="http://engineering.tamu.edu/cse/academics/peer-teachers"><h3>Texas A&M Computer Science Dept.</h3></a>
+                    <div class="col-md-6">
+                    <h5>Peer Tutor</h5>
+                    </div>
+                    <div class="col-md-6">
+                    <h5>08/2014 - Present</h5>
+                    </div>
+                    <p class="col-md-12">
+                    	I help with labs for classes i had previously done well in by sitting in and answering any questions students may have about the material or the assignments. I also hold office hours through-out the week where any student can come in for help with anything related to the course they are taking.
+                    </p>
                 </div>
             </div>
         </div>
