--- a/index.html
+++ b/index.html
@@ -252,8 +252,7 @@
             </div>
         </div>
     </div>
-</body>
-<script>
+    <script async>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -263,5 +262,6 @@
   ga('send', 'pageview');
 
 </script>
+</body>
 
 </html>
