--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <a href="mailto:jaidengerig@gmail.com"><i class="fa fa-envelope fa-lg"></i></a>
                         </p>
                         <p id="bio">
-                            Hailing from Austin, Texas, Jaiden Gerig is a student at Texas A&M University where he is currently studying for a Bachelors degree in Computer science. His professional interests include web and commercial software development. Whenever he's not studying, coding, or scarfing down burgers, Jaiden also enjoys video-games, live music, and Game of Thrones.
+                            Hailing from Austin, Texas, Jaiden Gerig is a student at Texas A&M University where he is currently studying for a Bachelor's degree in Computer science. His professional interests include web and applications software development. Whenever he's not studying or coding, Jaiden also enjoys playing board games, listening to live music, and scarfing down burgers. 
                         </p>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                     <h3><a href="https://github.com/jaideng123/SwimBook">SwimBook</a></h3>
                 </div>
                 <div class="col-md-6">
-                    A web application I created for a local YMCA to store, search, and access records of people who have passed a required swim test. It is now used by 3 separate YMCAs to synchronize their records.
+                    A web application I created for a local YMCA to store, search, and access records of people who have passed a required swim test. It is now used by 3 YMCAs in total to synchronize their records.
                     <br/> Created using Ruby on Rails, PostgreSQL, and Phusion Passenger for the backend and Bootstrap and DataTables for the front end.
                 </div>
                 <div class="col-md-6">
@@ -156,8 +156,8 @@
                     <h3><a href="https://github.com/diaspora/diaspora">Diaspora</a></h3>
                 </div>
                 <div class="col-md-6">
-                    Diaspora is an open-source decentralized social networking site built with Ruby on Rails.
-                    <br/> I contributed to the project by renovating their notifications dropdown to allow for more notifications using a jquery scrollbar and infinite scrolling using AJAX. I also fixed minor bugs related to the UI and backend systems.
+                    Diaspora is an open-source, decentralized, social networking site built with Ruby on Rails.
+                    <br/> I contributed to the project by renovating their notifications dropdown to allow for more notifications and infinite scrolling using a jquery scrollbar plugin and AJAX. I also fixed minor bugs related to the UI and backend systems.
                 </div>
                 <div class="col-md-6">
                     <div id="slides2">
@@ -175,7 +175,7 @@
                 </div>
                 <div class="col-md-6">
                     An Android game based around pressing buttons, created over the course of 24 hours for TamuHack 2014(A Hackathon hosted at Texas A&M)
-                    <br/> The application itself uses Java, along with the Android SDK and has multiple game modes along with a score tracking system. My task was coming up with and improving the basic game while my team mates worked on the various game modes
+                    <br/> The applicationuses Java, along with the Android SDK. It has multiple game modes along with a score tracking system for each. I developed and improved the base game while my team mates worked on the various game modes.
                 </div>
                 <div class="col-md-6">
                     <div id="slides3">
