--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
                 <div class="col-md-9 col-centered">
                     <div class="text-center">
                         <img src="http://www.gravatar.com/avatar/c40c74b23b32fadea4d1f9f2efabc777?s=150" class="img-circle" />
-                        <h3 class="title">
+                        <h2 class="title">
                             <a href="/">Jaiden Gerig</a>
-                        </h3>
+                        </h2>
                         <p>
                             <a href="https://github.com/jaideng123"><i class="fa fa-github fa-lg"></i></a> &nbsp;
                             <a href="https://twitter.com/jaideng123"><i class="fa fa-twitter fa-lg"></i></a> &nbsp;
                             <a href="mailto:jaidengerig@gmail.com"><i class="fa fa-envelope fa-lg"></i></a>
                         </p>
                         <p id="bio">
-                            Hailing from Austin, Texas, Jaiden Gerig is a student at Texas A&M University where he is currently studying for a Bachelor's degree in Computer science. His professional interests include web and applications software development. Whenever he's not studying or coding, Jaiden also enjoys playing board games, listening to live music, and scarfing down burgers. 
+                            Hailing from Austin, Texas, Jaiden Gerig is a student at Texas A&M University, where he is currently studying for a Bachelor's degree in Computer Science. His professional interests include web and applications software development. Whenever he's not studying or coding, Jaiden also enjoys playing board games, listening to live music, and scarfing down burgers. 
                         </p>
                     </div>
                 </div>
@@ -122,6 +122,7 @@
                         <li>jQuery</li>
                         <li>Android SDK</li>
                         <li>NodeJS</li>
+                        <li>Agile Development</li>
                     </ul>
                 </div>
             </div>
@@ -136,9 +137,10 @@
                 <div class="col-md-12">
                     <h3><a href="https://github.com/jaideng123/SwimBook">SwimBook</a></h3>
                 </div>
-                <div class="col-md-6">
-                    A web application I created for a local YMCA to store, search, and access records of people who have passed a required swim test. It is now used by 3 YMCAs in total to synchronize their records.
-                    <br/> Created using Ruby on Rails, PostgreSQL, and Phusion Passenger for the backend and Bootstrap and DataTables for the front end.
+                <div class="col-md-6"><ul>
+                    <li>A web application I created for a local YMCA to store, search, and access records of people who have passed a required swim test. It is now used by three YMCAs in total to synchronize their records.</li>
+                    <li>The application was created using Ruby on Rails, PostgreSQL, and Phusion Passenger for the back-end and Bootstrap and DataTables for the front-end.</li>
+                    </ul>
                 </div>
                 <div class="col-md-6">
                     <div id="slides">
@@ -155,9 +157,10 @@
                 <div class="col-md-12">
                     <h3><a href="https://github.com/diaspora/diaspora">Diaspora</a></h3>
                 </div>
-                <div class="col-md-6">
-                    Diaspora is an open-source, decentralized, social networking site built with Ruby on Rails.
-                    <br/> I contributed to the project by renovating their notifications dropdown to allow for more notifications and infinite scrolling using a jquery scrollbar plugin and AJAX. I also fixed minor bugs related to the UI and backend systems.
+                <div class="col-md-6"><ul>
+                    <li>Diaspora is an open-source, decentralized, social networking site built with Ruby on Rails.</li>
+                    <li> I contributed to the project by renovating their notifications dropdown to allow for more notifications and infinite scrolling using a jquery scrollbar plugin and AJAX. I also fixed minor bugs related to the UI and back-end systems.</li>
+                    </ul>
                 </div>
                 <div class="col-md-6">
                     <div id="slides2">
@@ -171,11 +174,12 @@
             </div>
             <div class="row project well well-sm">
                 <div class="col-md-12">
-                    <h3><a href="https://github.com/jaideng123/Lemonade">Speed Button</a></h3>
+                    <h3><a href="https://github.com/jaideng123/Lemonade">Speedbutton</a></h3>
                 </div>
-                <div class="col-md-6">
-                    An Android game based around pressing buttons, created over the course of 24 hours for TamuHack 2014(A Hackathon hosted at Texas A&M)
-                    <br/> The applicationuses Java, along with the Android SDK. It has multiple game modes along with a score tracking system for each. I developed and improved the base game while my team mates worked on the various game modes.
+                <div class="col-md-6"><ul>
+                    <li>An Android game where you tap buttons as quickly as possible in various game modes. created over the course of 24 hours for TamuHack 2014 (a Hackathon hosted at Texas A&M).</li>
+                    <li> The application uses Java, along with the Android SDK. It has multiple game modes along with a score tracking system for each. I developed and improved the base game while my team mates worked on the various game modes.</li>
+                    </ul>
                 </div>
                 <div class="col-md-6">
                     <div id="slides3">
@@ -191,9 +195,10 @@
                 <div class="col-md-12">
                     <h3><a href="https://github.com/jaideng123/Cryptosystems">RSA and Stegonography</a></h3>
                 </div>
-                <div class="col-md-6">
-                    An RSA and Stegonography tool created in C++ for encrypting and decrypting plaintext created in conjunction with 5 other team mates as a final project for CSCE 315(Programming Studio)
-                    <br/> Created using Agile development to effectively respond to changing requirements and organize work that needed to be done. The software itself uses CPPunit to accomadate test driven development and GMP for performing operations on big integers. My main role on the team was to organize Scrums, maintain the backlog, and design and implement the RSA system.
+                <div class="col-md-6"><ul>
+                    <li>An RSA and Stegonography tool created in C++ for encrypting and decrypting plaintext created in conjunction with 5 other team mates as a final project for CSCE 315 (Programming Studio).</li>
+                    <li> The main purpose of this project was to use Agile development to effectively respond to changing requirements and organize work that needed to be done. The software itself uses CPPunit to accommodate test driven development and GMP for performing operations on big integers. I organized Scrums, maintained the backlog, and designed and implemented the RSA system.</li>
+                    </ul>
                 </div>
                 <div class="col-md-6">
                     <div id="slides4">
@@ -217,7 +222,7 @@
                 		<img src="csen-logo.png" class="logo"></img>
                 </div>
                 <div class="col-md-7">
-                    <a href="http://engineering.tamu.edu/cse/academics/peer-teachers"><h3>Texas A&M Computer Science Dept.</h3></a>
+                    <a href="http://engineering.tamu.edu/cse/academics/peer-teachers"><h3>Texas A&M Computer Science Department</h3></a>
                     <div class="col-md-6">
                     <h5>Peer Tutor</h5>
                     </div>
@@ -225,7 +230,7 @@
                     <h5>08/2014 - Present</h5>
                     </div>
                     <p class="col-md-12">
-                    	I help with labs for classes i had previously done well in by sitting in and answering any questions students may have about the material or the assignments. I also hold office hours through-out the week where any student can come in for help with anything related to the course they are taking.
+                    	I assist TAs with labs for classes I had previously done well in by guiding students through problems they encounter. I also provide one-on-one assistance for students by hosting office hours throughout the week.
                     </p>
                 </div>
             </div>
