--- a/index.html
+++ b/index.html
@@ -234,6 +234,23 @@
                     </p>
                 </div>
             </div>
+            <div class="row well well-sm text-center">
+            	<div class = "col-md-5 pull-right">
+                		<img src="https://pbs.twimg.com/profile_images/649678728058896384/MVRDDnIi.png" class="logo"></img>
+                </div>
+                <div class="col-md-7">
+                    <a href="http://frogslayer.com/"><h3>Frogslayer LLC</h3></a>
+                    <div class="col-md-6">
+                    <h5>Software Engineer</h5>
+                    </div>
+                    <div class="col-md-6">
+                    <h5>10/2015 - Present</h5>
+                    </div>
+                    <p class="col-md-12">
+                    	I worked on a number of web applications as a full-stack developer with a focus on front-end and user interface development
+                    </p>
+                </div>
+            </div>
         </div>
         <div class="row" id="resume">
             <div class="col-md-12">
